--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -23,11 +23,10 @@ jobs:
       - name: Set up Go
         uses: actions/setup-go@v5
         with:
-          go-version: '1.22' # or your version
+          go-version: '1.25.1'
 
       - name: Download dependencies
         run: go mod download
 
       - name: Run tests
         run: go test -v ./...
-  ``
